trying to fix image display on the github page

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ b
 	b
 	b
 	
-	<img src="az.png"> <img src="ae.png"> <img src="ar.png">
+	<img src="./az.PNG"> <img src="./ae.PNG"> <img src="./ar.PNG">
 	
 </pre>		
 </body>
