adding w3c validator compliance

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="fr">
 <head>
 <meta charset="utf-8"/>
 <title> recap exam gprog 2021-2022 </title>
@@ -73,7 +74,7 @@ b
 	b
 	b
 	
-	<img src="./az.PNG"> <img src="./ae.PNG"> <img src="./ar.PNG">
+	<img src="./az.PNG" alt=" "> <img src="./ae.PNG" alt=" "> <img src="./ar.PNG" alt=" ">
 	
 </pre>		
 </body>
