changed file text encoding itself to utf8

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html lang="fr">
 <head>
 <meta charset="utf-8"/>
@@ -26,8 +26,8 @@ img {
 </ul>-->
 <h2> Render Pipeline </h2>
 <pre>
-Les étapes principales de rendu sont:
-	1) Description de scène / Vertex Data
+Les Ã©tapes principales de rendu sont:
+	1) Description de scÃ¨ne / Vertex Data
 	2) (Gestion de topologie - Hull shaders / Domain shaders / Geometry shaders)
 	3) Vertex Shading + Projection
 	4) Rasterization
@@ -49,17 +49,17 @@ Vertex Shading
 		
 Rasterization
 	-Clip space -> Screen space
-	-interpolation barycentrique de propriétés de vertices pour chaque fragment de la surface d'un triangle
+	-interpolation barycentrique de propriÃ©tÃ©s de vertices pour chaque fragment de la surface d'un triangle
 	
 Fragment shading
 	-Couleur
 		-Textures
-		-Lumière
+		-LumiÃ¨re
 	-Transparence
 		-Textures
 		-Type de shader (Opaque, Opaque avec AlphaClip, Transparent)
 		-Type de blending (Alpha blend, Additif, Multiplication, ...)
-	-Propriétés PBR
+	-PropriÃ©tÃ©s PBR
 		-Smoothness/Roughness
 		-Metalness
 		-Emission
