procedural textures listed

--- a/index.html
+++ b/index.html
@@ -336,6 +336,11 @@ Cette série d'étapes de calculs c'est ce qu'on appelle le pipeline graphique.
 	//todo
 -node Sampler State				
 	//todo
+-Textures procédurales
+	-node Checkerboard
+	-node Simple noise / Gradient noise
+	-node Voronoi
+	
 
 <h2>Animations</h2>
 //todo
