fixing png images

--- a/index.html
+++ b/index.html
@@ -290,17 +290,17 @@ pre {
 				-shaders de debug
 					On a parfois besoin d'afficher les données de nos objets pour les vérifier (positions, vecteurs, UVs, résultats de calculs intermédiaires, etc.), et on peut parfois les afficher sous forme de couleur par exemple.
 					Ces shaders servent surtout pendant le dev, et pas dans le build final.
-					<img src="./debug.PNG" alt="debug" onclick="zoompic(event)">
+					<img src="./debug.png" alt="debug" onclick="zoompic(event)">
 				-shaders "réalistes" old-school/retro (donc par si réalistes que ça de nos jours).
-					<img src="./flat.PNG" alt="flat" onclick="zoompic(event)">
+					<img src="./flat.png" alt="flat" onclick="zoompic(event)">
 				-shaders réalistes modernes, qui suivent le principe du Physically-Based Rendering (PBR)
 					On a pas tellement besoin d'apprendre à en faire nous-mêmes de cette catégorie,
 					c'est à ça que sert le shader de material standard de unity.
-					<img src="./pbr.PNG" alt="pbr" onclick="zoompic(event)">
+					<img src="./pbr.png" alt="pbr" onclick="zoompic(event)">
 				-shaders non-réalistes, souvent stylisés, cartoon, dits NPR (Non-Photo-Realistic)
-					<img src="./cartoon.PNG" alt="cartoon" onclick="zoompic(event)">
+					<img src="./cartoon.png" alt="cartoon" onclick="zoompic(event)">
 				-autres shaders, souvent pour des effets particuliers.
-					<img src="./fx.PNG" alt="fx" onclick="zoompic(event)">
+					<img src="./fx.png" alt="fx" onclick="zoompic(event)">
 		
 		-Materials
 			Si un shader est un script qui sert à contrôler le rendu d'un material,
@@ -321,33 +321,33 @@ pre {
 		-Exemples d'applications courantes
 			Nature et magie élémentaires :
 				Feu, flammes, explosions, lave, lumière
-					<img src="./feu.PNG" alt="feu" onclick="zoompic(event)">	<img src="./nuke.PNG" alt="nuke" onclick="zoompic(event)">
+					<img src="./feu.png" alt="feu" onclick="zoompic(event)">	<img src="./nuke.png" alt="nuke" onclick="zoompic(event)">
 				Eau, bulles, caustiques, cascades, acide
-					<img src="./cascade.PNG" alt="cascade" onclick="zoompic(event)">
+					<img src="./cascade.png" alt="cascade" onclick="zoompic(event)">
 				Vent et fantômes, fumée, magie ombre
-					<img src="./storm.PNG" alt="storm" onclick="zoompic(event)">
+					<img src="./storm.png" alt="storm" onclick="zoompic(event)">
 				Glace, neige
-					<img src="./ice.PNG" alt="ice" onclick="zoompic(event)">
+					<img src="./ice.png" alt="ice" onclick="zoompic(event)">
 				Électricité, éclairs
-					<img src="./bolt.PNG" alt="bolt" onclick="zoompic(event)">
+					<img src="./bolt.png" alt="bolt" onclick="zoompic(event)">
 				Herbe
 				Cristaux et roches, sable
-					<img src="./sand.PNG" alt="sand" onclick="zoompic(event)">	<img src="./crystal.PNG" alt="crystal" onclick="zoompic(event)">
+					<img src="./sand.png" alt="sand" onclick="zoompic(event)">	<img src="./crystal.png" alt="crystal" onclick="zoompic(event)">
 			Science & Fiction :
 				Champs de force
-					<img src="./shield.PNG" alt="shield" onclick="zoompic(event)">
+					<img src="./shield.png" alt="shield" onclick="zoompic(event)">
 				Portails, Téléporteurs
-					<img src="./portal.PNG" alt="portal" onclick="zoompic(event)">
+					<img src="./portal.png" alt="portal" onclick="zoompic(event)">
 				Hologrammes et invisibilité
 				Lasers
 				Désintégration
 			Styles :
 				Cel-shading et cartoon
-					<img src="./cel_shading.PNG" alt="cel_shading" onclick="zoompic(event)">
+					<img src="./cel_shading.png" alt="cel_shading" onclick="zoompic(event)">
 				Contours
 					<img src="./outline.jpg" alt="outline" onclick="zoompic(event)">
 				Dithering & pixel-art auto
-					<img src="./obra_dinn.PNG" alt="obra_dinn" onclick="zoompic(event)">
+					<img src="./obra_dinn.png" alt="obra_dinn" onclick="zoompic(event)">
 				Filtres : palettes couleur, négatifs, etc.
 					<img src="./visor.jpg" alt="visor" onclick="zoompic(event)">
 			Catégories spéciales :
