youtube embed test

--- a/index.html
+++ b/index.html
@@ -649,7 +649,10 @@ pre {
 	//todo
 
 </pre> --><h2>Texturing</h2><pre>
-	<a href="https://drive.google.com/file/d/1zMz4b5UO-ccquYR11yXr2dO9rliBPMgJ/view?usp=sharing">video drive</a>
+	<a href="https://drive.google.com/file/d/1zMz4b5UO-ccquYR11yXr2dO9rliBPMgJ/view?usp=sharing">lien drive</a>
+	vs 
+	embed youtube:
+	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/R799a0IIucM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	//todo
 	-node Sample Texture 2D
 		//todo
@@ -857,6 +860,9 @@ pre {
 	-Vertex Displacement
 		//todo
 	//todo
+</pre><h2>Faire une vidéo</h2><pre>
+	-vidéo avec OBS et recorder
+	-vidéo top qualité sur machine basses-perfs
 </pre>
 <script>
 
